2013-10-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_extensions.php: Added the functions
	"extensions_add_tab_function", "extensions_call_tab_function"
	and "get_tab_extensions". Improved the functions
	"extensions_get_extensions" and "extensions_add_tab_option".
	
	* include/styles/integria.css: Fixed the background attribute
	on 'input.pdfreport'.
	
	* operation/incidents/incident_dashboard_detail.php: Now the
	linked extensions appear on the main tabs and can be triggered.
	
	* extensions/incident_summary.php: Added extension. This extension
	shows a summary of the incident and is possible to export it to pdf.
	
2013-10-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_extensions.php: Improved the functions
	"extensions_add_godmode_side_menu_option" and
	"extensions_print_side_menu_subsection".
	
	* index.php: Fixed an error on the call of the extension functions.
	
	* operation/side_menu.php: Little error fix.

2013-10-18  Dario Rodriguez <dario@artica.es>

	* operation/download/browse.php: Fixed a bug related to public url
	for file releases. 

2013-10-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/: Added folder.
	
	* include/functions_extensions.php: Added file. Added the functions
	"extensions_get_extensions", "extensions_load_extensions",
	"extensions_is_extension", "extensions_add_side_menu_option",
	"extensions_add_godmode_side_menu_option", "extensions_add_tab_agent",
	"extensions_add_main_function", "extensions_call_main_function",
	"extensions_add_godmode_function", "extensions_call_godmode_function",
	"extensions_print_side_menu_subsection".
	
	* index.php: Added calls to a functions that load the extensions
	and its main and godmode functions.
	
	* include/config_process.php: Added a call to a function that loads
	the extensions info into the $config variable.
	
	* godmode/setup/offline_update.php: Visual changes in the package
	uploader.
	